/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/servicepb";

package servicepb;

import "api/applicationpb/config.proto";

import "api/committerpb/status.proto";

import "api/servicepb/common.proto";

service Verifier {
    rpc StartStream(stream VerifierBatch) returns (stream committerpb.TxStatusBatch);
}

message VerifierBatch {
    optional VerifierUpdates update = 1;
    repeated TxWithRef requests = 2;
}

message VerifierUpdates {
    optional applicationpb.ConfigTransaction config = 1;
    optional applicationpb.NamespacePolicies namespace_policies = 2;
}
